--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(255, 242, 206);
+    
   }
   
   h1 {
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
   }
   
@@ -12,3 +13,69 @@ body {
     font-size: 20px;
   }
   
+   ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+  }
+  
+  li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color on hover */
+  li a:hover {
+    background-color: #555;
+    color: white;
+  }
+
+
+div.gallery {
+                      margin: 5px;
+                      border: 1px solid #ccc;
+                      float: left;
+                      width: 180px;
+                    }
+                  
+                    div.gallery:hover {
+                      border: 1px solid #777;
+                    }
+                    
+                    div.gallery img {
+                      width: 100%;
+                      height: auto;
+                    }
+                    
+                    div.desc {
+                      padding: 15px;
+                      text-align: center;
+                    }
+                   
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
